Add qwen_image_style task type support to API orchestrator
- Added new qwen_image_style task type handler in api_orchestrator/main.py
- Uses wavespeed-ai/qwen-image/edit-lora endpoint for style transfer
- Maps style_reference_image and style_reference_strength parameters
- Includes default style transfer LoRA configuration
- Supports additional LoRAs via params
- Handles file download/upload to Supabase storage
- Updated supported task types list

Also includes previous orchestrator -> gpu_orchestrator rename and other improvements.

--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -24,4 +24,4 @@ RUN useradd -m -u 1000 orchestrator
 USER orchestrator
 
 # Default command (can be overridden)
-CMD ["python", "-m", "orchestrator.main", "single"] 
+CMD ["python", "-m", "gpu_orchestrator.main", "single"] 
