--- a/env.example
+++ b/env.example
@@ -1,19 +1,36 @@
 # API Credentials
 SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
+SUPABASE_ACCESS_TOKEN=your_access_token_here
 RUNPOD_API_KEY=your_runpod_api_key_here
 REPLICATE_API_TOKEN=your_replicate_api_token_here
+
+# Wavespeed AI
+WAVESPEED_API_KEY=your_wavespeed_api_key_here
+
+# API Orchestrator Settings
+API_WORKER_CONCURRENCY=20
+API_RUN_TYPE=api
+API_PARENT_POLL_SEC=10
+API_WORKER_ID=api-worker-1
+
+# Edge Function URLs (optional - will auto-construct from SUPABASE_URL if not provided)
+SUPABASE_EDGE_UPDATE_TASK_URL=https://your-project.supabase.co/functions/v1/update-task-status
 
 # Scaling Parameters
 MIN_ACTIVE_GPUS=2
 MAX_ACTIVE_GPUS=10
 TASKS_PER_GPU_THRESHOLD=3
-
+MACHINES_TO_KEEP_IDLE=0              # Number of idle GPUs to keep running for immediate task pickup
+ççç
 # Timeouts (seconds)
 GPU_IDLE_TIMEOUT_SEC=300         # How long before idle workers are terminated (for cost savings)
+GPU_OVERCAPACITY_IDLE_TIMEOUT_SEC=30  # Idle timeout used only when over-capacity
 TASK_STUCK_TIMEOUT_SEC=1200      # How long before a running task is considered stuck (20 min for video generation)
 SPAWNING_TIMEOUT_SEC=300         # How long to wait for a new worker to start
 GPU_HEALTH_CHECK_TIMEOUT_SEC=120 # How long before VRAM metrics are considered stale
+ERROR_CLEANUP_GRACE_PERIOD_SEC=600  # Grace period before force-terminating error workers (10 min)
+FAILSAFE_STALE_THRESHOLD_SEC=7200   # Failsafe threshold for detecting stale workers (2 hours)
 
 # Shutdown Parameters
 GRACEFUL_SHUTDOWN_TIMEOUT_SEC=600
