Fix Dockerfiles to work from subdirectories
- Update COPY paths to reference parent directory
- Remove health checks that may cause issues
- Ensure both services can access requirements.txt and full project

--- a/api_orchestrator/Dockerfile
+++ b/api_orchestrator/Dockerfile
@@ -15,24 +15,17 @@ RUN apt-get update && apt-get install -y \
 # Create app directory
 WORKDIR /app
 
-# Copy requirements and install dependencies
-COPY requirements.txt .
+# Copy requirements from parent directory and install dependencies
+COPY ../requirements.txt .
 RUN pip install --no-cache-dir --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the entire project (needed for shared modules)
-COPY . .
+# Copy the entire project from parent directory (needed for shared modules)
+COPY .. .
 
 # Create non-root user for security
 RUN useradd -m -u 1000 apiworker && chown -R apiworker:apiworker /app
 USER apiworker
-
-# Health check for Railway
-HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-  CMD python -c "import httpx; import asyncio; asyncio.run(httpx.AsyncClient().get('http://localhost:8080/health', timeout=5))" || exit 1
-
-# Expose port for Railway (if needed for health checks)
-EXPOSE 8080
 
 # Default command - runs the API orchestrator in continuous mode
 CMD ["python", "-m", "api_orchestrator.main"]
