Fix Dockerfiles to work within subdirectory context
- Remove parent directory references (../) that don't work in Railway
- Install dependencies directly in Dockerfile instead of requirements.txt
- Copy files within current directory context
- Simplify structure to work with Railway's build system

--- a/api_orchestrator/Dockerfile
+++ b/api_orchestrator/Dockerfile
@@ -1,10 +1,9 @@
-# Railway-optimized Dockerfile for API Orchestrator
+# Railway Dockerfile for API Orchestrator
 FROM python:3.11-slim
 
 # Set environment variables
 ENV PYTHONUNBUFFERED=1
 ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONPATH=/app
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
@@ -15,17 +14,27 @@ RUN apt-get update && apt-get install -y \
 # Create app directory
 WORKDIR /app
 
-# Copy requirements from parent directory and install dependencies
-COPY ../requirements.txt .
-RUN pip install --no-cache-dir --upgrade pip
-RUN pip install --no-cache-dir -r requirements.txt
+# Install common Python packages that are likely needed
+RUN pip install --no-cache-dir --upgrade pip && \
+    pip install --no-cache-dir \
+    httpx \
+    asyncio \
+    python-dotenv \
+    supabase \
+    requests \
+    aiohttp \
+    structlog \
+    python-json-logger
 
-# Copy the entire project from parent directory (needed for shared modules)
-COPY .. .
+# Copy the current directory (api_orchestrator)
+COPY . /app/api_orchestrator/
+
+# Copy main.py to root level for easier execution
+COPY main.py /app/
 
 # Create non-root user for security
 RUN useradd -m -u 1000 apiworker && chown -R apiworker:apiworker /app
 USER apiworker
 
-# Default command - runs the API orchestrator in continuous mode
-CMD ["python", "-m", "api_orchestrator.main"]
+# Default command - runs the API orchestrator
+CMD ["python", "main.py"]
