--- a/gpu_orchestrator/Dockerfile
+++ b/gpu_orchestrator/Dockerfile
@@ -1,10 +1,9 @@
-# Railway-optimized Dockerfile for GPU Orchestrator
+# Railway Dockerfile for GPU Orchestrator
 FROM python:3.11-slim
 
 # Set environment variables
 ENV PYTHONUNBUFFERED=1
 ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONPATH=/app
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
@@ -16,13 +15,30 @@ RUN apt-get update && apt-get install -y \
 # Create app directory
 WORKDIR /app
 
-# Copy requirements from parent directory and install dependencies
-COPY ../requirements.txt .
-RUN pip install --no-cache-dir --upgrade pip
-RUN pip install --no-cache-dir -r requirements.txt
+# Install common Python packages that are likely needed
+RUN pip install --no-cache-dir --upgrade pip && \
+    pip install --no-cache-dir \
+    httpx \
+    asyncio \
+    python-dotenv \
+    supabase \
+    requests \
+    runpod \
+    paramiko \
+    aiohttp \
+    structlog \
+    python-json-logger \
+    pydantic
 
-# Copy the entire project from parent directory (needed for shared modules)
-COPY .. .
+# Copy the current directory (gpu_orchestrator)
+COPY . /app/gpu_orchestrator/
+
+# Copy main files to root level
+COPY main.py /app/
+COPY control_loop.py /app/gpu_orchestrator/
+COPY database.py /app/gpu_orchestrator/
+COPY runpod_client.py /app/gpu_orchestrator/
+COPY logging_config.py /app/gpu_orchestrator/
 
 # Create non-root user for security
 RUN useradd -m -u 1000 orchestrator && chown -R orchestrator:orchestrator /app
