--- a/gpu_orchestrator/Dockerfile
+++ b/gpu_orchestrator/Dockerfile
@@ -1,48 +1,28 @@
-# Railway Dockerfile for GPU Orchestrator
+# GPU Orchestrator Dockerfile - builds from parent context
 FROM python:3.11-slim
 
-# Set environment variables
 ENV PYTHONUNBUFFERED=1
 ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONPATH=/app
 
-# Install system dependencies
 RUN apt-get update && apt-get install -y \
     curl \
     git \
     openssh-client \
     && rm -rf /var/lib/apt/lists/*
 
-# Create app directory
 WORKDIR /app
 
-# Install common Python packages that are likely needed
-RUN pip install --no-cache-dir --upgrade pip && \
-    pip install --no-cache-dir \
-    httpx \
-    asyncio \
-    python-dotenv \
-    supabase \
-    requests \
-    runpod \
-    paramiko \
-    aiohttp \
-    structlog \
-    python-json-logger \
-    pydantic
+# Copy requirements from parent directory
+COPY ../requirements.txt .
+RUN pip install --no-cache-dir --upgrade pip
+RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the current directory (gpu_orchestrator)
-COPY . /app/gpu_orchestrator/
+# Copy entire project from parent directory
+COPY .. .
 
-# Copy main files to root level
-COPY main.py /app/
-COPY control_loop.py /app/gpu_orchestrator/
-COPY database.py /app/gpu_orchestrator/
-COPY runpod_client.py /app/gpu_orchestrator/
-COPY logging_config.py /app/gpu_orchestrator/
+RUN useradd -m -u 1000 worker && chown -R worker:worker /app
+USER worker
 
-# Create non-root user for security
-RUN useradd -m -u 1000 orchestrator && chown -R orchestrator:orchestrator /app
-USER orchestrator
-
-# Default command - runs the GPU orchestrator in continuous mode
+# Run GPU orchestrator specifically
 CMD ["python", "-m", "gpu_orchestrator.main", "continuous"]
