--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,10 @@ structlog>=23.0.0
 # JSON logging formatter
 python-json-logger>=2.0.0
 
+# Image/video processing
+opencv-python-headless>=4.9.0.80
+numpy>=1.26.0
+
 # Testing
 pytest>=7.4.0
 pytest-asyncio>=0.21.0
