--- a/api_orchestrator/requirements.txt
+++ b/api_orchestrator/requirements.txt
@@ -2,6 +2,9 @@ httpx>=0.25.0
 requests>=2.31.0
 python-dotenv>=1.0.0
 aiohttp>=3.8.0
+# Pin aiodns/pycares to compatible versions (3.6.0/5.0.0 have type annotation bugs)
+aiodns==3.1.1
+pycares==4.3.0
 structlog>=23.0.0
 python-json-logger>=2.0.0
 opencv-python-headless>=4.9.0.80
