--- a/gpu_orchestrator/requirements.txt
+++ b/gpu_orchestrator/requirements.txt
@@ -13,6 +13,9 @@ python-dotenv>=1.0.0
 # Async support
 asyncio
 aiohttp>=3.8.0
+# Pin aiodns/pycares to compatible versions (3.6.0/5.0.0 have type annotation bugs)
+aiodns==3.1.1
+pycares==4.3.0
 
 # JSON handling
 pydantic>=2.0.0
